unpackaged/main/default/objects/nbavs__Insight_Category__c/nbavs__Insight_Category__c.object-meta.xml
<CustomObject>
    <label>Insight Category</label>
    <nameField>
        <displayFormat>Cat-{00000}</displayFormat>
        <label>Call Category Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>