unpackaged/main/default/objects/nbavs__Insight_Category__c/fields/nbavs__Call_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Call_Start_Date__c</fullName>
    <formula>DATEVALUE( nbavs__Insights__r.CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Start Date</label>
    <type>Date</type>
</CustomField>