unpackaged/main/default/objects/nbavs__Insight_Category__c/fields/nbavs__Category_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Category_Name__c</fullName>
    <label>Category Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>