unpackaged/main/default/objects/nbavs__Insight_Category__c/fields/nbavs__Detected__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Detected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the category was detected in the recording</description>
    <label>Detected</label>
    <type>Checkbox</type>
</CustomField>