unpackaged/main/default/objects/nbavs__Insight_Category__c/fields/nbavs__Insight_Category_Configuration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insight_Category_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insight Category Configuration</label>
    <referenceTo>nbavs__Insight_Category_Configuration__c</referenceTo>
    <relationshipLabel>Insight Categories</relationshipLabel>
    <relationshipName>Insight_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>