unpackaged/main/default/objects/nbavs__Insight_Category__c/fields/nbavs__Trigger_Terms_Other__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Trigger_Terms_Other__c</fullName>
    <description>A list of keywords that caused the category to fire for secondary channel</description>
    <label>Trigger Terms Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>