unpackaged/main/default/objects/nbavs__Insight_Category__c/fields/nbavs__Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Trigger_Type__c</fullName>
    <description>The trigger type of the category defining whether the category was expected, not expected or just info</description>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Unexpected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>